# cli-proxy-api-B

./: .gitignore  README.md  pyproject.toml  run.sh  start.sh
app/: cliproxy.py  config.py  health.py  main.py  models.py  replenisher.py  service.py  storage.py
app/static/: app.js  style.css
app/templates/: index.html
scripts/: start.sh  stop.sh
