[project]
name = "cli-proxy-api-b"
version = "0.1.0"
description = "Standalone pool maintainer for CLIProxyAPI inventory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
